--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h1 class="mb-0">Sandipan
           <span class="text-primary">Choudhuri</span>
         </h1>
-        <div class="subheading mb-5">(+1) 480-300-9385  
+        <div class="subheading mb-5">
           <a href="mailto:name@email.com">s.choudhuri@asu.edu</a>
         </div>
         <p class="lead mb-5">I am a PhD student in Computer Science at Arizona State University. Currently, I am working in Domain adaptation.</p>
