--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
         </div>
         <p class="lead mb-5">I am a PhD student in Computer Science at Arizona State University. Currently, I am working in Domain adaptation.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/sandipan-choudhuri-760aa7125">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="http://www.github.com/S-Choudhuri">
+          <a href="https://github.com/S-Choudhuri">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
+          <a href="https://scholar.google.com/citations?user=PCB9xTMAAAAJ&hl=en">
             <i class="fab fa-google-scholar"></i>
+          </a>
+          <a href="https://twitter.com/Sandipan__C">
+            <i class="fab fa-twitter"></i>
           </a>
         </div>
       </div>
