--- a/index.html
+++ b/index.html
@@ -95,45 +95,49 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Research Assisstant</h3>
+            <div class="subheading mb-3">Arizona State University, USA</div>
+            <p>The project involves regio-based future opioid overdose instance detection</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">May 2019 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Teaching Assisstant</h3>
+            <div class="subheading mb-3">Arizona State University, USA</div>
+            <p>CSE 551 - Foundations of Algorithms</p>
+            <p>CSE 572 - Data Mining</p>
+            <p>CSE 205 - Principles of Programing Languages</p>
+            <p>CSE 110 - Introduction to Programming</p>            
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">August 2017 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">JuniorResearch Fellow</h3>
+            <div class="subheading mb-3">Jadavpur University, India</div>
+            <p>Developed an automated breast-cancer detection framework from Fine-Needle-Accuracy Cytological Images</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">August 2015 - April 2017</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">Teaching Assisstant</h3>
+            <div class="subheading mb-3">Jadavpur University, India</div>
+            <p>Introduction to Programming</p>
+            <p>Database Management Systems</p>            
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">August 2013 - August 2015</span>
           </div>
         </div>
 
@@ -149,24 +153,37 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">Arizona State University</h3>
+            <div class="subheading mb-3">PhD</div>
+            <div>Computer Science - Machine Learning</div>
+            <p>GPA: 3.9</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">August 2017 - May 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">Jadavpur University, India</h3>
+            <div class="subheading mb-3">Masters in Engineering</div>
+            <div>Computer Science - Machine Learning</div>
+            <p>GPA: 8.44/10</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">August 2013 - June 2015</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">West Bengal University of Technology, India</h3>
+            <div class="subheading mb-3">Bachelor of Technology</div>
+            <div>Computer Science</div>
+            <p>GPA: 8.70/10</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2009 - July 2013</span>
           </div>
         </div>
 
