--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Research Assisstant</h3>
             <div class="subheading mb-3">Arizona State University, USA</div>
-            <p>The project involves regio-based future opioid overdose instance detection</p>
+            <p>The project involves region-based future opioid overdose instance detection</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2019 - Present</span>
@@ -120,7 +120,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">JuniorResearch Fellow</h3>
+            <h3 class="mb-0">Junior Research Fellow</h3>
             <div class="subheading mb-3">Jadavpur University, India</div>
             <p>Developed an automated breast-cancer detection framework from Fine-Needle-Accuracy Cytological Images</p>
           </div>
