--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
-        <ul class="fa-ul mb-0">
-          <li>
+        <ul class="fa-ul mb-0"> <!--
+          <li> 
             <i class="fa-li fa fa-trophy text-warning"></i>
             Google Analytics Certified Developer</li>
           <li>
@@ -295,7 +295,7 @@
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            Place - James Buchanan High School - Hackathon 2005</li> -->
         </ul>
       </div>
     </section>
