--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <h3 class="mb-0">Arizona State University</h3>
             <div class="subheading mb-3">PhD</div>
             <div>Computer Science - Machine Learning</div>
-            <p>GPA: 3.9</p>
+            <!--<p>GPA: 3.9</p>-->
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2017 - May 2022</span>
@@ -168,7 +168,7 @@
             <h3 class="mb-0">Jadavpur University, India</h3>
             <div class="subheading mb-3">Masters in Engineering</div>
             <div>Computer Science - Machine Learning</div>
-            <p>GPA: 8.44/10</p>
+            <!--<p>GPA: 8.44/10</p>-->
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2013 - June 2015</span>
@@ -180,7 +180,7 @@
             <h3 class="mb-0">West Bengal University of Technology, India</h3>
             <div class="subheading mb-3">Bachelor of Technology</div>
             <div>Computer Science</div>
-            <p>GPA: 8.70/10</p>
+            <!--<p>GPA: 8.70/10</p>-->
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2009 - July 2013</span>
