--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Arizona State University</h3>
-            <div class="subheading mb-3">PhD</div>
+            <h3 class="mb-0">PhD</h3>
+            <div class="subheading mb-3">Arizona State University, USA</div>
             <div>Computer Science - Machine Learning</div>
             <!--<p>GPA: 3.9</p>-->
           </div>
@@ -165,8 +165,8 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Jadavpur University, India</h3>
-            <div class="subheading mb-3">Masters in Engineering</div>
+            <h3 class="mb-0">Masters in Engineering</h3>
+            <div class="subheading mb-3">Jadavpur University, India</div>
             <div>Computer Science - Machine Learning</div>
             <!--<p>GPA: 8.44/10</p>-->
           </div>
@@ -177,8 +177,8 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">West Bengal University of Technology, India</h3>
-            <div class="subheading mb-3">Bachelor of Technology</div>
+            <h3 class="mb-0">Bachelor of Technology</h3>
+            <div class="subheading mb-3">West Bengal University of Technology, India</div>
             <div>Computer Science</div>
             <!--<p>GPA: 8.70/10</p>-->
           </div>
