--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
           <a href="https://twitter.com/Sandipan__C">
             <i class="fab fa-twitter"></i>
           </a>
+
+          <a href="https://www.instagram.com/choudhuri.sandipan">
+            <i class="fab fa-instagram"></i>
+          </a>
         </div>
       </div>
     </section>
