--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <i class="fab fa-github"></i>
           </a>
           <a href="https://scholar.google.com/citations?user=PCB9xTMAAAAJ&hl=en">
-            <i class="fab fa-google-scholar"></i>
+            <i class="fab fa-google"></i>
           </a>
           <a href="https://twitter.com/Sandipan__C">
             <i class="fab fa-twitter"></i>
