--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
         <div class="subheading mb-5">
           <a href="mailto:name@email.com">s.choudhuri@asu.edu</a>
         </div>
-        <p class="lead mb-5">I am a PhD student in Computer Science at Arizona State University. Currently, I am working in Domain adaptation.</p>
+        <p class="lead mb-5">Hi! I am a PhD student majoring in Computer Science at Arizona State University. I am a member of NetXt research lab directed by Professor Arunabha Sen. Before joining ASU in 2017, I did my Master’s at Jadavpur University (India) with a major in Computer Science. At JU, I worked on contour detection semantic segmentation on natural scenes, while being supervised by Professor Mita Nasipuri at CMATER labs. Currently, I am working in domain adaptation for image classification with different proportion of label-set overlaps between domains. </p>
+
+        <p class="lead mb-5">In case if you like to contact me, drop me a mail or find me in the links below.
+        </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/sandipan-choudhuri-760aa7125">
             <i class="fab fa-linkedin-in"></i>
