--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
         <div class="subheading mb-5">
           <a href="mailto:name@email.com">s.choudhuri@asu.edu</a>
         </div>
-        <p class="lead mb-5"  style="text-align: justify;">Hi! I am a PhD student majoring in Computer Science at Arizona State University. I am a member of NetXt research lab, directed by Professor Arunabha Sen. Before joining ASU in 2017, I did my Master’s at Jadavpur University (India) with a major in Computer Science. At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working in domain adaptation problems for image classification with a focus on a much real-world scenario, where different proportions of label-set overlaps exist between domains.</p>
+        <p class="lead mb-5"  style="text-align: justify;">Hi! I am a PhD student majoring in Computer Science at Arizona State University. I am a member of NetXt research lab, directed by Professor Arunabha Sen. Before joining ASU in 2017, I did my Master’s at Jadavpur University (India) with a major in Computer Science.</p>
+
+        <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working in domain adaptation problems for image classification with a focus on a much real-world scenario, where different proportions of label-set overlaps exist between domains.</p>
 
         <p class="lead mb-5">In case if you like to contact me, drop me a mail or find me through the links below.
         </p>
