--- a/index.html
+++ b/index.html
@@ -265,11 +265,20 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Research Interests</h2>
-            <p>Domain Adaptation</p>
-            <p>Semantic Segmentation</p>
-            <p>Contour Detection</p>
-            <p>Time-Series Analysis</p>            
-          
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Domain Adaptation</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Contour Detection</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Semantic Segmentation</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Time-Series Analysis</li>
+        </ul>          
       </div>
     </section>
 
