--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
           <div class="resume-content">
             <h3 class="mb-0">Teaching Assisstant</h3>
             <div class="subheading mb-3">Arizona State University, USA</div>
-            <p><i class="fa-li fa fa-check"></i> CSE 551 - Foundations of Algorithms</p>
+            ::marker
+            <p> CSE 551 - Foundations of Algorithms</p>
+            ::marker
             <p>CSE 572 - Data Mining</p>
             <p>CSE 205 - Principles of Programing Languages</p>
             <p>CSE 110 - Introduction to Programming</p>            
