--- a/index.html
+++ b/index.html
@@ -117,13 +117,25 @@
           <div class="resume-content">
             <h3 class="mb-0">Teaching Assisstant</h3>
             <div class="subheading mb-3">Arizona State University, USA</div>
-            ::marker
-            <p> CSE 551 - Foundations of Algorithms</p>
-            ::marker
-            <p>CSE 572 - Data Mining</p>
-            <p>CSE 205 - Principles of Programing Languages</p>
-            <p>CSE 110 - Introduction to Programming</p>            
-          </div>
+              <ul class="list-inline dev-icons">
+                <li class="list-inline-item">
+                  ::marker
+                  <p> CSE 551 - Foundations of Algorithms</p>
+                </li>
+                <li class="list-inline-item">
+                  ::marker
+                  <p> CSE 572 - Data Mining</p>
+                </li>
+                <li class="list-inline-item">
+                  ::marker
+                  <p> CSE 205 - Principles of Programing Languages</p>
+                </li>
+                <li class="list-inline-item">
+                  ::marker
+                  <p> CSE 110 - Introduction to Programming</p>
+                </li>
+              </ul>         
+            </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2017 - Present</span>
           </div>
