--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Teaching Assisstant</h3>
             <div class="subheading mb-3">Arizona State University, USA</div>
-              <ul class="list-inline dev-icons">
+              <ul class="fa-ul mb-0">
                 <li class="list-inline-item">
                   ::marker
                   <p> CSE 551 - Foundations of Algorithms</p>
