--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
             <div class="subheading mb-3">Arizona State University, USA</div>
               <ul class="fa-ul mb-0">
                 <li class="list-inline-item">
-                  ::marker
+                  <i class="fa-li fa fa-check"></i>
                   <p> CSE 551 - Foundations of Algorithms</p>
                 </li>
                 <li class="list-inline-item">
-                  ::marker
+                  <i class="fa-li fa fa-check"></i>
                   <p> CSE 572 - Data Mining</p>
                 </li>
                 <li class="list-inline-item">
-                  ::marker
+                  <i class="fa-li fa fa-check"></i>
                   <p> CSE 205 - Principles of Programing Languages</p>
                 </li>
                 <li class="list-inline-item">
-                  ::marker
+                  <i class="fa-li fa fa-check"></i>
                   <p> CSE 110 - Introduction to Programming</p>
                 </li>
               </ul>         
