--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
           <div class="resume-content">
             <h3 class="mb-0">Teaching Assisstant</h3>
             <div class="subheading mb-3">Arizona State University, USA</div>
-              <p class="fa-li fa fa-check"> CSE 551 - Foundations of Algorithms</p>
-              <p class="fa-li fa fa-check"> CSE 572 - Data Mining</p>
-              <p class="fa-li fa fa-check"> CSE 205 - Principles of Programing Languages</p>
-              <p class="fa-li fa fa-check"> CSE 110 - Introduction to Programming</p>        
+              <p> CSE 551 - Foundations of Algorithms</p>
+              <p> CSE 572 - Data Mining</p>
+              <p> CSE 205 - Principles of Programing Languages</p>
+              <p> CSE 110 - Introduction to Programming</p>        
             </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2017 - Present</span>
