--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <i class="fab fa-github"></i>
           </a>
           <a href="https://scholar.google.com/citations?user=PCB9xTMAAAAJ&hl=en">
-            <i class="fab fa-google"></i>
+            <i class="fa fa-graduation-cap body-icon"></i>
           </a>
           <a href="https://twitter.com/Sandipan__C">
             <i class="fab fa-twitter"></i>
