--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Research Interests</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
         </li>
       </ul>
     </div>
@@ -202,7 +202,58 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <div class="subheading mb-3">Libraries</div>
+        	<ul class="fa-ul mb-0">
+	          	<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Keras
+	          	</li>
+	          	<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Pytorch
+	          	</li>
+	          	<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	D3
+	          	</li>	          	
+	      	</ul>
+
+        <div class="subheading mb-3">Programming Languages & Tools</div>
+        	<ul class="fa-ul mb-0">
+	          	<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Python
+	          	</li>
+	          	<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Matlab
+	          	</li>	          	
+	          	<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Java
+	          	</li>
+	          	<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Tableau
+	          	</li>         		
+	      	</ul>
+
+        <div class="subheading mb-3">Web Development</div>
+        	<ul class="fa-ul mb-0">
+	          	<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	HTML
+	          	</li>
+	          	<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	CSS
+	          	</li>	          		          	
+	          	<li>
+	            	<i class="fa-li fa fa-check"></i>
+	            	Javascript
+	          	</li>
+	      	</ul>
+
         <!--
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
@@ -243,21 +294,7 @@
           </li>
         </ul>
         -->
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul>
+
       </div>
     </section>
 
@@ -285,37 +322,33 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
-        <ul class="fa-ul mb-0"> <!--
-          <li> 
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+        <h2 class="mb-5">Relevant Publications</h2>
+        <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+            <i class="fa-li fa fa-check"></i>
+			Choudhuri, Sandipan, Kaustav Basu, and Arunabha Sen. "User Satisfaction-Driven Bandwidth Allocation for Image Transmission in a Crowded Environment." arXiv preprint arXiv:1802.09079 (2018).</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+            <i class="fa-li fa fa-check"></i>
+            Choudhuri, Sandipan, Nibaran Das, Ritesh Sarkhel, and Mita Nasipuri. "Object Localization on Natural Scenes: A Survey." International Journal of Pattern Recognition and Artificial Intelligence 32, no. 02 (2018): 1855001.</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
+		  <li>
+            <i class="fa-li fa fa-check"></i>
+            Choudhuri, Sandipan, Nibaran Das, and Mita Nasipuri. "A Quality-Concordance Metric Based Contour Detection by Utilizing Composite-Cue Information and Particle Swarm Optimisation." In Proceedings of the 5th International Conference on Frontiers in Intelligent Computing: Theory and Applications, pp. 641-651. Springer, Singapore, 2017.</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li> -->
-        </ul>
+            <i class="fa-li fa fa-check"></i>
+            Choudhuri, Sandipan, Nibaran Das, Swarnendu Ghosh, and Mita Nasipuri. "A multi-cue information based approach to contour detection by utilizing superpixel segmentation." In 2016 International Conference on Advances in Computing, Communications and Informatics (ICACCI), pp. 1057-1063. IEEE, 2016.
+		  </li>   
+		  <li>       	
+            <i class="fa-li fa fa-check"></i>
+            Das, Aritra, Swarnendu Ghosh, Ritesh Sarkhel, Sandipan Choudhuri, Nibaran Das, and Mita Nasipuri. "Combining Multilevel Contexts of Superpixel Using Convolutional Neural Networks to Perform Natural Scene Labeling." In Recent Developments in Machine Learning and Data Analytics, pp. 297-306. Springer, Singapore, 2019.</li>
+		  <li>       	
+            <i class="fa-li fa fa-check"></i>
+			Basu, Kaustav, Sandipan Choudhuri, Arunabha Sen, and Aniket Majumdar. "Insights from Statistical Analysis of Opioid Data." arXiv preprint arXiv:1805.05509 (2018).</li>
+        </ul> 
       </div>
     </section>
 
