--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <i class="fab fa-twitter"></i>
           </a>
 
-          <a href="https://www.instagram.com/choudhuri.sandipan">
+          <a href="https://www.instagram.com/sandilettante">
             <i class="fab fa-instagram"></i>
           </a>
         </div>
