--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">
           <a href="mailto:name@email.com">s.choudhuri@asu.edu</a>
         </div>
-        <p class="lead mb-5"  style="text-align: justify;">Hi! I am a PhD student majoring in Computer Science at Arizona State University. I am a member of the NetXt research lab, directed by Professor Arunabha Sen. Before joining ASU in 2017, I was a Junior Research Fellow and did my Master’s at Jadavpur University (India) with a major in Computer Science.</p>
+        <p class="lead mb-5"  style="text-align: justify;">Hi! I am a PhD student majoring in Computer Science at Arizona State University. I am a member of the NetXt research lab, directed by Professor Arunabha Sen. Before joining ASU in 2017, I was a Junior Research Fellow at Jadavpur University (India) and did my Master’s with a major in Computer Science.</p>
 
         <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working in domain adaptation problems for image classification with a focus on a much real-world scenario with different proportions of label-set overlaps existing between domains.</p>
 
