--- a/index.html
+++ b/index.html
@@ -341,8 +341,13 @@
           <li style="text-align: justify;">
             <i class="fa-li fa fa-check"></i>
             Choudhuri, Sandipan, Nibaran Das, Swarnendu Ghosh, and Mita Nasipuri. "A multi-cue information based approach to contour detection by utilizing superpixel segmentation." In 2016 International Conference on Advances in Computing, Communications and Informatics (ICACCI), pp. 1057-1063. IEEE, 2016.
-		  </li>   
-		  <li style="text-align: justify;">       	
+	  </li> 
+	  <li style="text-align: justify;">
+            <i class="fa-li fa fa-check"></i>
+			Sen, Arunabha, Sandipan Choudhuri, and Kaustav Basu. "Structural Dependency Aware Service Chain Mapping for Network Function Virtualization." In 2020 16th International Conference on the Design of Reliable Communication Networks DRCN 2020, pp. 1-6. IEEE, 2020.</li>
+          <li>
+		
+          <li style="text-align: justify;">       	
             <i class="fa-li fa fa-check"></i>
             Das, Aritra, Swarnendu Ghosh, Ritesh Sarkhel, Sandipan Choudhuri, Nibaran Das, and Mita Nasipuri. "Combining Multilevel Contexts of Superpixel Using Convolutional Neural Networks to Perform Natural Scene Labeling." In Recent Developments in Machine Learning and Data Analytics, pp. 297-306. Springer, Singapore, 2019.</li>
             
