--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Research Assisstant</h3>
             <div class="subheading mb-3">Arizona State University, USA</div>
-            <p>The project involves region-based future opioid overdose instance detection</p>
+            <p>A State Opioid Response (SOR) project funded by the Arizona Health Care Cost Containment System (AHCCCS) for addressing the opioid crisis in Arizona.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2019 - Present</span>
