--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <a href="https://scholar.google.com/citations?user=PCB9xTMAAAAJ&hl=en">
             <i class="fa fa-graduation-cap body-icon"></i>
           </a>
-          <a href="https://twitter.com/Sandipan__C">
+          <a href="https://twitter.com/Choudhuri_">
             <i class="fab fa-twitter"></i>
           </a>
 
