--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         <div class="subheading mb-5">
           <a href="mailto:name@email.com">s.choudhuri@asu.edu</a>
         </div>
-        <p class="lead mb-5"  style="text-align: justify;">Hi! I am a PhD student majoring in Computer Science at Arizona State University. I am a member of the NetXt research lab, directed by Professor Arunabha Sen. Before joining ASU in 2017, I was a Junior Research Fellow at Jadavpur University (India) and did my Master’s with a major in Computer Science.</p>
+        <p class="lead mb-5"  style="text-align: justify;">Hi! I am a PhD student majoring in Computer Science at Arizona State University. I am a member of NetXt research lab, directed by Professor Arunabha Sen. Before joining ASU in 2017, I was a Junior Research Fellow and did my Master’s at Jadavpur University (India) with a major in Computer Science.</p>
 
-        <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working in domain adaptation problems for image classification with a focus on a much real-world scenario, where different proportions of label-set overlaps exist between domains.</p>
+        <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working in domain adaptation problems for image classification with a focus on a much real-world scenario- where different proportions of label-set overlaps exist between domains.</p>
 
         <p class="lead mb-5">In case if you like to contact me, drop me a mail or find me through the links below.
         </p>
@@ -85,11 +85,11 @@
           <a href="https://scholar.google.com/citations?user=PCB9xTMAAAAJ&hl=en">
             <i class="fa fa-graduation-cap body-icon"></i>
           </a>
-          <a href="https://twitter.com/Choudhuri_">
+          <a href="https://twitter.com/Sandipan__C">
             <i class="fab fa-twitter"></i>
           </a>
 
-          <a href="https://www.instagram.com/sandilettante">
+          <a href="https://www.instagram.com/choudhuri.sandipan">
             <i class="fab fa-instagram"></i>
           </a>
         </div>
@@ -106,7 +106,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Research Assisstant</h3>
             <div class="subheading mb-3">Arizona State University, USA</div>
-            <p>A State Opioid Response (SOR) project funded by the Arizona Health Care Cost Containment System (AHCCCS) for addressing the opioid crisis in Arizona.</p>
+            <p>The project involves region-based future opioid overdose instance detection</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2019 - Present</span>
@@ -143,7 +143,8 @@
             <h3 class="mb-0">Teaching Assisstant</h3>
             <div class="subheading mb-3">Jadavpur University, India</div>
             <p>Introduction to Programming</p>
-            <p>Database Management Systems</p>            
+            <p>Object-Oriented Programming with Java and C++</p>
+            <p>Data Structures and Algorithms</p>            
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2013 - August 2015</span>
@@ -306,16 +307,23 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Domain Adaptation</li>
+            Partial Domain Adaptation</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Source-Free Domain Adaptation</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Closed-Set Domain Adaptation</li>
           <li>
             <i class="fa-li fa fa-check"></i>
             Contour Detection</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Semantic Segmentation</li>
+            Semantic Segmentation</li> 
           <li>
             <i class="fa-li fa fa-check"></i>
-            Time-Series Analysis</li>
+            Time-Series Analysis</li>              
+            
         </ul>          
       </div>
     </section>
@@ -341,13 +349,8 @@
           <li style="text-align: justify;">
             <i class="fa-li fa fa-check"></i>
             Choudhuri, Sandipan, Nibaran Das, Swarnendu Ghosh, and Mita Nasipuri. "A multi-cue information based approach to contour detection by utilizing superpixel segmentation." In 2016 International Conference on Advances in Computing, Communications and Informatics (ICACCI), pp. 1057-1063. IEEE, 2016.
-	  </li> 
-	  <li style="text-align: justify;">
-            <i class="fa-li fa fa-check"></i>
-			Sen, Arunabha, Sandipan Choudhuri, and Kaustav Basu. "Structural Dependency Aware Service Chain Mapping for Network Function Virtualization." In 2020 16th International Conference on the Design of Reliable Communication Networks DRCN 2020, pp. 1-6. IEEE, 2020.</li>
-          <li>
-		
-          <li style="text-align: justify;">       	
+		  </li>   
+		  <li style="text-align: justify;">       	
             <i class="fa-li fa fa-check"></i>
             Das, Aritra, Swarnendu Ghosh, Ritesh Sarkhel, Sandipan Choudhuri, Nibaran Das, and Mita Nasipuri. "Combining Multilevel Contexts of Superpixel Using Convolutional Neural Networks to Perform Natural Scene Labeling." In Recent Developments in Machine Learning and Data Analytics, pp. 297-306. Springer, Singapore, 2019.</li>
             
