--- a/index.html
+++ b/index.html
@@ -335,6 +335,10 @@
         <h2 class="mb-5">Relevant Publications</h2>
         <ul class="fa-ul mb-0">
           <li style="text-align: justify;">
+	    <i class="fa-li fa fa-check"></i>	  
+		  Choudhuri, Sandipan, Riti Paul, Arunabha Sen, Baoxin Li, and Hemanth Venkateswara. "Partial Domain Adaptation Using Selective Representation Learning For Class-Weight Computation." arXiv preprint arXiv:2101.02275 (2021).
+          <li>
+          <li style="text-align: justify;">
             <i class="fa-li fa fa-check"></i>
 			Choudhuri, Sandipan, Kaustav Basu, and Arunabha Sen. "User Satisfaction-Driven Bandwidth Allocation for Image Transmission in a Crowded Environment." arXiv preprint arXiv:1802.09079 (2018).</li>
           <li>
