--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+          <a class="nav-link js-scroll-trigger" href="#experience">Professional Experience</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -69,9 +69,9 @@
         <div class="subheading mb-5">
           <a href="mailto:name@email.com">s.choudhuri@asu.edu</a>
         </div>
-        <p class="lead mb-5"  style="text-align: justify;">Hi! I am a PhD student majoring in Computer Science at Arizona State University. I am a member of NetXt research lab, directed by Professor Arunabha Sen. Before joining ASU in 2017, I was a Junior Research Fellow at Jadavpur University (India), where I worked on a project involving computer-aided diagnostic system development for breast cancer detection from FNAC images. I did my Master’s degree from the same institution with a major in Computer Science.</p>
+        <p class="lead mb-5"  style="text-align: justify;">Hi! I am a PhD student majoring in Computer Science at Arizona State University, and a member of the NetXT research Lab. With a demonstrated history of working in Computer Vision, Image Processing, and Machine Learning, my current research interest is primarily focused on a realistic Domain Adaptation scenario for image classification with different degrees of shared label space assumptions between domains.</p>
 
-        <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working in domain adaptation problems for image classification with a focus on a much real-world scenario, where different proportions of label-set overlaps exist between domains.</p>
+        <!-- <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working in domain adaptation problems for image classification with a focus on a much real-world scenario, where different proportions of label-set overlaps exist between domains.</p> -->
 
         <p class="lead mb-5">In case if you like to contact me, drop me a mail or find me through the links below.
         </p>
@@ -100,16 +100,19 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-5">Professional Experience</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Research Assisstant</h3>
-            <div class="subheading mb-3">Arizona State University, USA</div>
-            <p>The project involves region-based future opioid overdose instance detection</p>
+            <h3 class="mb-0">Machine Learning Intern</h3>
+            <div class="subheading mb-3">ROVICARE, USA</div>
+            <p>Formulated and developed a machine-learning pipeline using Azure Form-Recognizer Service and open-source libraries to streamline extraction of clinical information from scanned records of semi-structured non-electronic healthcare documents.</p>
+	    <p>Developed an efficient module for keyword search in scanned documents using Azure Cognitive Services.</p>
+	    <p>Built Python RESTful APIs and deployed them on the Azure App Services with Docker runtime.</p>
+	    <p>Automated different stages of a deal pipeline in HubSpot; designed modules in HubSpot ticketing for monitoring support request response sessions; devised an automated contract filling system through the integration of PandaDoc with HubSpot.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">May 2019 - Present</span>
+            <span class="text-primary">May 2022 - August 2022</span>
           </div>
         </div>
 
