--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
           <div class="resume-content">
             <h3 class="mb-0">Machine Learning Intern</h3>
             <div class="subheading mb-3">ROVICARE, USA</div>
-            <p style="text-align: justify;"><i class="fa-li fa fa-check"></i> Formulated and developed a machine-learning pipeline using Azure Form-Recognizer Service and open-source libraries to streamline extraction of clinical information from scanned records of semi-structured non-electronic healthcare documents.</p>
-	    <p style="text-align: justify;"><i class="fa-li fa fa-check"></i> Developed an efficient module for keyword search in scanned documents using Azure Cognitive Services.</p>
-	    <p style="text-align: justify;"><i class="fa-li fa fa-check"></i> Built Python RESTful APIs and deployed them on the Azure App Services with Docker runtime.</p>
-	    <p style="text-align: justify;"><i class="fa-li fa fa-check"></i> Automated different stages of a deal pipeline in HubSpot; designed modules in HubSpot ticketing for monitoring support request response sessions; devised an automated contract filling system through the integration of PandaDoc with HubSpot.</p>
+            <p style="text-align: justify;">&#x25cf; Formulated and developed a machine-learning pipeline using Azure Form-Recognizer Service and open-source libraries to streamline extraction of clinical information from scanned records of semi-structured non-electronic healthcare documents.</p>
+	    <p style="text-align: justify;">&#x25cf; Developed an efficient module for keyword search in scanned documents using Azure Cognitive Services.</p>
+	    <p style="text-align: justify;">&#x25cf; Built Python RESTful APIs and deployed them on the Azure App Services with Docker runtime.</p>
+	    <p style="text-align: justify;">&#x25cf; Automated different stages of a deal pipeline in HubSpot; designed modules in HubSpot ticketing for monitoring support request response sessions; devised an automated contract filling system through the integration of PandaDoc with HubSpot.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2022 - August 2022</span>
