--- a/index.html
+++ b/index.html
@@ -120,15 +120,46 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assisstant</h3>
-            <div class="subheading mb-3">Arizona State University, USA</div>
-              <p> CSE 551 - Foundations of Algorithms</p>
-              <p> CSE 572 - Data Mining</p>
-              <p> CSE 205 - Principles of Programing Languages</p>
-              <p> CSE 110 - Introduction to Programming</p>        
-            </div>
+            <h3 class="mb-0">Machine Learning Intern</h3>
+            <div class="subheading mb-3">INTERBIZ, USA</div>
+	    <ul>	  
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a multi-modal data processing architecture for detecting automotive estimate types and extracting structured information from the scanned estimates using Google Document AI, Google Cloud Vision API, and open-source libraries.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built Google Cloud Web Application services with OAuth 2.0 framework authentication (conforming to the HIPAA security and privacy requirements) for accessing and processing healthcare documents from Google Drive and Google Cloud Storage.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Created a form-parsing engine for health insurance claim forms, using Google Cloud Vision API and open-source libraries.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Interacted with the stakeholders for requirements gathering, workflow designing, data processing, and documentation.</il>
+	    </ul>
+	  </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2017 - Present</span>
+            <span class="text-primary">May 2021 - August 2021</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Research Assistant</h3>
+            <div class="subheading mb-3">NetXT LAB [ASU], USA</div>
+	    <ul>	  
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Working on the Opioid Response project at ASU, funded by the Arizona Health Care Cost Containment System (AHCCCS).</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a framework for estimating future opioid overdose incidence volumes over a geographic region and strategically determining optimal locations for setting up Medically Assisted Treatment (MAT) facilities under budgetary constraints.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built a pipeline for automatic characterization of opioid-related tweets (using RoBERTa) and evaluating their effectiveness as a viable indicator of overdose incidence volume change; a framework for detecting illicit online opioid sales is currently underway.</il>
+	    </ul>
+	  </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2019 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Junior Research Fellow</h3>
+            <div class="subheading mb-3">CMATER LAB, India</div>
+	    <ul>	  
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Served as the technical lead forthe Breast Cancer Diagnostic System development program on Fine-Needle Aspiration Cytology images; duties included research and development, communicating with the expert groups at diagnostic units, and the project managementteam at Jadavpur University forrequirements gathering, data acquisition, and configuring access controls.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Conducted research and developed models for vision tasks: Object Localization, Semantic Contour Detection and Image Segmentation on natural scene (BSDS500, PASCAL-VOC, Stanford B.) and near-Infrared image (RGB-NIR Scene) datasets.</il>    
+	    </ul>
+	  </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2019 - Present</span>
           </div>
         </div>
 
