--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">
           <a href="mailto:name@email.com">s.choudhuri@asu.edu</a>
         </div>
-        <p class="lead mb-5"  style="text-align: justify;">Hi! I am a PhD student majoring in Computer Science at Arizona State University, and a member of the NetXT research Lab. With a demonstrated history of working in Computer Vision, Image Processing, and Machine Learning, my current research interest is primarily focused on a realistic Domain Adaptation scenario for image classification with different degrees of shared label space assumptions between domains.</p>
+        <p class="lead mb-5"  style="text-align: justify;">Hi! I am a Ph.D. student majoring in Computer Science at Arizona State University, and a member of the NetXT research Lab. With a demonstrated history of working in Computer Vision, Image Processing, and Machine Learning, my current research interest is primarily focused on a realistic Domain Adaptation scenario for image classification with different degrees of shared label space assumptions between domains.</p>
 
         <!-- <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working in domain adaptation problems for image classification with a focus on a much real-world scenario, where different proportions of label-set overlaps exist between domains.</p> -->
 
@@ -159,18 +159,7 @@
 	    </ul>
 	  </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2019 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Junior Research Fellow</h3>
-            <div class="subheading mb-3">Jadavpur University, India</div>
-            <p>Developed an automated breast-cancer detection framework from Fine-Needle-Accuracy Cytological Images</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2015 - April 2017</span>
+            <span class="text-primary">August 2015 - March 2017</span>
           </div>
         </div>
 
