--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
           <div class="resume-content">
             <h3 class="mb-0">PhD</h3>
             <div class="subheading mb-3">Arizona State University, USA</div>
-            <div>Computer Science - Machine Learning</div>
+		  <div>Dissertation: <em>"Domain Adaptation in Unconstrained Label Spaces."</em></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2017 - May 2022</span>
+            <span class="text-primary">August 2017 - May 2023 [Tentative]</span>
           </div>
         </div>
 
@@ -201,7 +201,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Masters in Engineering</h3>
             <div class="subheading mb-3">Jadavpur University, India</div>
-            <div>Computer Science - Machine Learning</div>
+		  <div>Thesis: <em>"A Quality-Concordance Measure-Based Approach to Edge Detection."</em></div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2013 - June 2015</span>
