--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Research Assistant</h3>
-            <div class="subheading mb-3">NetXT LAB [ASU], USA</div>
+            <div class="subheading mb-3">NetXT LAB, USA</div>
 	    <ul>	  
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Working on the Opioid Response project at ASU, funded by the Arizona Health Care Cost Containment System (AHCCCS).</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a framework for estimating future opioid overdose incidence volumes over a geographic region and strategically determining optimal locations for setting up Medically Assisted Treatment (MAT) facilities under budgetary constraints.</il>
@@ -163,7 +163,7 @@
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <!--<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Teaching Assisstant</h3>
             <div class="subheading mb-3">Jadavpur University, India</div>
@@ -174,7 +174,7 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2013 - August 2015</span>
           </div>
-        </div>
+        </div>-->
 
       </div>
 
