--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
           <div class="resume-content">
             <h3 class="mb-0">PhD</h3>
             <div class="subheading mb-3">Arizona State University, USA</div>
+		  <div>Computer Science</div>
 		  <div>Dissertation: <em>"Domain Adaptation in Unconstrained Label Spaces."</em></div>
           </div>
           <div class="resume-date text-md-right">
@@ -201,6 +202,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Masters in Engineering</h3>
             <div class="subheading mb-3">Jadavpur University, India</div>
+		  <div>Computer Science and Engineering</div>
 		  <div>Thesis: <em>"A Quality-Concordance Measure-Based Approach to Edge Detection."</em></div>
           </div>
           <div class="resume-date text-md-right">
@@ -212,7 +214,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Bachelor of Technology</h3>
             <div class="subheading mb-3">West Bengal University of Technology, India</div>
-            <div>Computer Science</div>
+            <div>Computer Science and Engineering</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2009 - July 2013</span>
